tests/ui/span/issue-33884.stderr
error[E0308]: mismatched types
  --> $DIR/issue-33884.rs:6:22
   |
LL |     stream.write_fmt(format!("message received"))
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Arguments<'_>`, found `String`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
